--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,17 @@
-sudo: false
 language: c
 
 addons:
   apt:
     packages:
     - pandoc
+    - luarocks
 
-script: curl -s https://raw.githubusercontent.com/BigWigsMods/packager/master/release.sh | bash
+before_install:
+  - chmod +x translations.sh
+
+script:
+  - ./translations.sh;
+  - curl -s https://raw.githubusercontent.com/BigWigsMods/packager/master/release.sh | bash
 
 branches:
   only:
