--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,27 +1,33 @@
 name: Build Release
 
 on:
-  push:
-    branches:
-      - master
-    tags:
-      - "*"
+   push:
+      branches:
+         - master
+      tags:
+         - "*"
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+   build:
+      runs-on: ubuntu-latest
 
-    env:
-      CF_API_KEY: ${{ secrets.CF_API_KEY }}
-      GITHUB_OAUTH: ${{ secrets.OAUTH_TOKEN }}
+      env:
+         CF_API_KEY: ${{ secrets.CF_API_KEY }}
+         GITHUB_OAUTH: ${{ secrets.OAUTH_TOKEN }}
 
-    steps:
-      - uses: actions/checkout@v1
-        with:
-          fetch-depth: 150
+      steps:
+         - uses: actions/checkout@v1
+           with:
+              fetch-depth: 150
 
-      - name: Update CF Translations
-        run: ./translations.sh
+         - name: Install and run Luacheck
+           run: |
+              sudo apt-get install luarocks
+              luarocks install --local luacheck
+              /home/runner/.luarocks/bin/luacheck . --no-color -q
 
-      - name: Package And Release
-        uses: BigWigsMods/packager@master
+         - name: Update CF Translations
+           run: ./translations.sh
+
+         - name: Package And Release
+           uses: BigWigsMods/packager@master
