--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -3,25 +3,31 @@ name: PullRequest-CI
 on: [pull_request]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+   build:
+      runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v1
-      - name: Create Retail Package
-        run: curl -s https://raw.githubusercontent.com/BigWigsMods/packager/master/release.sh | bash -s -- -d -z
-        env:
-          CF_API_KEY: ${{ secrets.CF_API_KEY }}
-          GITHUB_OAUTH: ${{ secrets.OAUTH_TOKEN }}
-          WOWI_API_TOKEN: ${{ secrets.WOWI_API_TOKEN }}
+      steps:
+         - uses: actions/checkout@v1
+         - name: Install and run luacheck
+           run: |
+              sudo apt-get install luarocks
+              luarocks install --local luacheck
+              /home/runner/.luarocks/bin/luacheck . --no-color -q
 
-      - uses: actions/upload-artifact@master
-        with:
-          name: Exlist-PR
-          path: .release/
+         - name: Create Retail Package
+           run: curl -s https://raw.githubusercontent.com/BigWigsMods/packager/master/release.sh | bash -s -- -d -z
+           env:
+              CF_API_KEY: ${{ secrets.CF_API_KEY }}
+              GITHUB_OAUTH: ${{ secrets.OAUTH_TOKEN }}
+              WOWI_API_TOKEN: ${{ secrets.WOWI_API_TOKEN }}
 
-      - name: Send status to Discord
-        uses: nebularg/actions-discord-webhook@v1
-        with:
-          webhook_url: ${{ secrets.discord_webhook_url }}
-        if: always()
+         - uses: actions/upload-artifact@master
+           with:
+              name: Exlist-PR
+              path: .release/
+
+         - name: Send status to Discord
+           uses: nebularg/actions-discord-webhook@v1
+           with:
+              webhook_url: ${{ secrets.discord_webhook_url }}
+           if: always()
