--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,8 @@ jobs:
               args: "--no-color -q"
 
          - name: Update CF Translations
-           run: ./translations.sh
+           run: |
+              sudo ./translations.sh
 
          - name: Package And Release
            uses: BigWigsMods/packager@master
