--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,7 @@ jobs:
          CF_API_KEY: ${{ secrets.CF_API_KEY }}
          GITHUB_OAUTH: ${{ secrets.OAUTH_TOKEN }}
          WOWI_API_TOKEN: ${{ secrets.WOWI_API_TOKEN }}
+         WAGO_API_TOKEN: ${{ secrets.WAGO_API_TOKEN }}
 
       steps:
          - uses: actions/checkout@v1
