--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,23 @@
 {
   "editor.tabSize": 2,
-  "Lua.diagnostics.disable": ["undefined-global", "redefined-local"]
+  "Lua.diagnostics.disable": [
+    "undefined-global",
+    "redefined-local"
+  ],
+  "Lua.runtime.version": "Lua 5.1",
+  "Lua.runtime.builtin": {
+    "basic": "disable",
+    "debug": "disable",
+    "io": "disable",
+    "math": "disable",
+    "os": "disable",
+    "package": "disable",
+    "string": "disable",
+    "table": "disable",
+    "utf8": "disable"
+  },
+  "Lua.workspace.library": [
+    "~\\.vscode\\extensions\\ketho.wow-api-0.17.4\\Annotations"
+  ],
+  "Lua.diagnostics.globals": []
 }
