--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,7 +17,8 @@
     "utf8": "disable"
   },
   "Lua.workspace.library": [
-    "~\\.vscode\\extensions\\ketho.wow-api-0.18.2\\Annotations"
+    "c:\\Users\\abede\\.cursor\\extensions\\ketho.wow-api-0.20.8\\Annotations\\Core"
   ],
-  "Lua.diagnostics.globals": []
+  "Lua.diagnostics.globals": [],
+  "Lua.type.weakUnionCheck": true
 }
