--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -20,11 +20,15 @@ jobs:
               CF_API_KEY: ${{ secrets.CF_API_KEY }}
               GITHUB_OAUTH: ${{ secrets.OAUTH_TOKEN }}
               WOWI_API_TOKEN: ${{ secrets.WOWI_API_TOKEN }}
+           with:
+              args: -d -z
+
 
          - uses: actions/upload-artifact@master
            with:
               name: Exlist-PR
               path: .release/
+              include-hidden-files: true
 
          - name: Send status to Discord
            uses: nebularg/actions-discord-webhook@v1
