--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -14,15 +14,10 @@ jobs:
               luarocks install --local luacheck
               /home/runner/.luarocks/bin/luacheck . --no-color -q
 
-         - name: Create Retail Package
-           run: curl -s https://raw.githubusercontent.com/BigWigsMods/packager/master/release.sh | bash -s -- -d -z
-           env:
-              CF_API_KEY: ${{ secrets.CF_API_KEY }}
-              GITHUB_OAUTH: ${{ secrets.OAUTH_TOKEN }}
-              WOWI_API_TOKEN: ${{ secrets.WOWI_API_TOKEN }}
+         - name: Create Package
+           uses: BigWigsMods/packager@v2
            with:
               args: -d -z
-
 
          - uses: actions/upload-artifact@master
            with:
